# time-burns-away

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  requirements-dev.txt  setup.cfg  time_burns_away.py  tox.ini
tests/: time_burns_away_test.py
