[metadata]
name = time-burns-away
version = 0.1
description = CLI tool to divide students in to groups with persistence
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cheminDeFer/time-burns-away
author = Hüseyin Er
author_email = erhuseyinn@gmail.com
license = MIT
license_file = LICENSE

[options]
packages = find:

python_requires = >=3.7

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    time-burns-away = time_burns_away:main

[bdist_wheel]
universal = True
