[metadata]
name = time-burns-away
version = 0.1
description = Count down timer curses application
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cheminDeFer/time-burns-away
author = Hüseyin Er
author_email = erhuseyinn@gmail.com
license = MIT
license_file = LICENSE

[options]
py_modules = time_burns_away

python_requires = >=3.7


[options.entry_points]
console_scripts =
    time-burns-away = time_burns_away:main

[bdist_wheel]
universal = True
